--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -111,7 +111,7 @@ Fihgure \ref{fig:fnlbias} displays a comparison between the best-fitting estimat
 \end{figure}
 
 
-\mr{As summarized in Table \ref{tab:contmocksmcmc}, we observe notable shifts in the best-fitting estimates of $\fnl$ resulting from fits to the mean power spectrum of the mocks. Specifically, for the $\fnl=0$ mocks, we obtain $\Delta \fnl=-12$ for non-linear three maps, $-20$ for non-linear four maps, and $-27$ for non-linear nine maps. Larger shifts are evident for $\fnl=76.9$: $\Delta \fnl=-23$ for non-linear three maps, $-39$ for non-linear four maps, and $-72$ for non-linear nine maps.}
+\mr{As summarized in Table \ref{tab:contmocksmcmc}, we observe notable shifts in the best-fitting estimates of $\fnl$ obtained from the mean power spectrum of the mocks. Specifically, for the $\fnl=0$ mocks, we obtain $\Delta \fnl=-12$ for non-linear three maps, $-20$ for non-linear four maps, and $-27$ for non-linear nine maps. Larger shifts are evident for $\fnl=76.9$: $\Delta \fnl=-23$ for non-linear three maps, $-39$ for non-linear four maps, and $-72$ for non-linear nine maps. These factor imply that the effect of systematic mitigation on the inferred $\fnl$ depends on the true value of $\fnl$. Additionally, using only a single set of mocks (e.g., $\fnl=0$) for the calibration might under-estimate the impact.}
 
 To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for non-linear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. The uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
 
