updating the ms

--- a/style.sty
+++ b/style.sty
@@ -17,14 +17,14 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue,
-    citecolor=blue,
+    linkcolor=black, % blue
+    citecolor=black, % blue
 }
 
 \graphicspath{{./}{figures/}}
 
 % ----- add your commands
-\newcommand{\mr}[1]{\textcolor{cyan}{#1}}
+\newcommand{\mr}[1]{\textcolor{blue}{#1}}
 \newcommand{\uw}[1]{\textcolor{magenta}{\uwave{#1}}}
 \newcommand{\mc}[1]{\textcolor{red}{\textbf{MR: ``\textit{#1}''}}}
 \newcommand{\mout}[1]{\textcolor{red}{\sout{#1}}}
