--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -12,7 +12,7 @@
 \caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{two maps}, \textit{three maps}, and \textit{eight maps}, respectively. The green and pink curves display the results after applying the imaging weights from the non-linear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
-\subsection{Cross power spectrum}
+\subsection{Normalized cross power spectrum}
 
 We characterize the cross correlations between the galaxy density and imaging systematic maps by
 \begin{equation}
@@ -32,9 +32,9 @@ Figure \ref{fig:clxmock} shows $\tilde{C}_{X,\ell}$ from the DESI LRG targets be
 
 The linear three maps approach alleviates the cross correlation against psfsize in r, and it yields similar results to those obtained from \textit{linear nine maps}, which indicates most of the contaminations can be attributed to these three maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. Compared with the linear three maps method, we find that non-linear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which shows the benefit of using a non-linear approach. To further examine the robustness of our cleaning methods, we also show the cross correlations after cleaning the DESI LRG targets using all available property maps (non-linear nine maps). 
 
-\subsection{Mean density contrast}
+\subsection{Mean galaxy density contrast}
 
-We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
+We calculate the histogram of the mean galaxy density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
 \begin{equation}
 \delta_{x_{j}} = ({\overline{\rho}})^{-1} \frac{\sum_{i} \rho_{i} W_{i}}{\sum_{i} W_{i}} \mr{- 1},
 \end{equation}
@@ -58,20 +58,20 @@ where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is 
 \begin{figure*}
     \centering
     \includegraphics[width=\textwidth]{figures/chi2_tests.pdf}
-    \caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast (left) and the galaxy-imaging cross power spectrum (right). The values observed in the DESI LRG targets after the non-linear treatments are represented via vertical lines using the $\fnl=0$ (solid) or $76.9$ (dashed) covariance, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ (solid) and $76.9$ (dashed)}.}\label{fig:chi2test}
+    \caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast (left) and the galaxy-imaging normalized cross power spectrum (right). The values observed in the DESI LRG targets after the non-linear treatments are represented via vertical lines using the $\fnl=0$ (solid) or $76.9$ (dashed) covariance, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ (solid) and $76.9$ (dashed)}.}\label{fig:chi2test}
 \end{figure*}
 
 \subsection{Residual error $\chi^{2}$}
-We use the $\chi^{2}$ statistics to assess how significant these mean density and cross power spectrum fluctuations are in comparison to the clean mocks. Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the mean density contrast (left) and the normalized cross spectrum (right) statistics obtained from the lognormal mocks with different $\fnl$ values. \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} \mout{No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values.} The DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. \mr{The solid and dashed vertical lines represent the values computed using the covariances based on the $\fnl=0$ and $76.9$ mocks, respectively. Regardless of the covariance, we find that the case without treatment (No Weight) exhibits serious contamination. For instance, the mean density and cross power errors are respectively $\chi^{2}=679.8$ and $20014.8$ (both with $p$-value $< 0.001$), using the $\fnl=0$ covariance. These $\chi^{2}$ values are significantly high given that the degree of freedom is $72$ for the mean density and $81$ for the cross power spectrum.}  \mr{After cleaning, the $\chi^{2}$ values are decreased dramatically for both the mean density and normalized cross spectrum tests. However, neither non-linear three maps nor non-linear four maps can reduce $\chi^{2}$ enough to be consistent with the mocks, indicating some residual error with $p$-values less than $0.005$ for the mean density test.} \mout{After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$.} The small impact on $\chi^{2}$ \mr{from including stellar density} suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{In general, we observe that our most aggressive treatment, employing a non-linear method with nine maps, successfully meets the mean density test irrespective of the covariance, as indicated by $\chi^{2}=71.9$ ($p$-value = $>0.48$). It is essential to maintain a consistent covariance matrix, involving the same mitigation and ensuring consistency in $\fnl$ within the covariance. The sensitivity of the mean density $\chi^{2}$ to the $\fnl$ assumption in the covariance is notably lower, with greater reliance on the consistent mitigation method. Conversely, the normalized cross spectrum $\chi^{2}$ exhibits a higher dependency on the $\fnl$ assumption in the covariance. Since the non-linear three maps fails to pass the tests, we contend that the linear methods are also ineffective in mitigating systematics. Therefore, based on the mean density test, the most motivated method is the non-linear method using nine maps.}
+We use the $\chi^{2}$ statistics to assess how significant these mean density and cross power spectrum fluctuations are in comparison to the clean mocks. Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the mean density contrast (left) and the normalized cross spectrum (right) statistics obtained from the lognormal mocks with different $\fnl$ values. \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} \mout{No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values.} The DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. \mr{The solid and dashed vertical lines represent the values computed using the covariances based on the $\fnl=0$ and $76.9$ mocks, respectively. Regardless of the covariance, we find that the case without treatment (No Weight) exhibits serious contamination. For instance, the mean density and cross power errors are respectively $\chi^{2}=679.8$ and $20014.8$ (both with $p$-value $< 0.001$), using the $\fnl=0$ covariance. These $\chi^{2}$ values are significantly high given that the degree of freedom is $72$ for the mean density and $81$ for the cross power spectrum.}  \mr{After cleaning, the $\chi^{2}$ values are decreased dramatically for both the mean density and normalized cross spectrum tests. However, neither non-linear three maps nor non-linear four maps can reduce $\chi^{2}$ enough to be consistent with the mocks, indicating some residual error with $p$-values less than $0.005$ for the mean density test.} \mout{After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$.} The small impact on $\chi^{2}$ \mr{from including stellar density} suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{In general, we observe that our most aggressive treatment, employing a non-linear method with nine maps, successfully meets the mean density test irrespective of the covariance, as indicated by $\chi^{2}=71.9$ ($p$-value = $>0.48$). It is essential to maintain a consistent covariance matrix, involving the same mitigation and ensuring consistency in $\fnl$ within the covariance. The sensitivity of the mean density $\chi^{2}$ to the $\fnl$ assumption in the covariance is notably lower, with greater reliance on the consistent mitigation method. Conversely, the normalized cross spectrum $\chi^{2}$ exhibits a higher dependency on the $\fnl$ assumption in the covariance. The normalized cross power spectrum $\chi^{2}$ only involves multipoles for up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. As a robustness test, we increase the largest $\ell$ used in the $\chi^{2}$ calculation from $20$ to $100$, where the latter scale corresponds to density fluctuations on angular scales smaller than $2$ degrees. But we find no remaining systematic errors. Figure \ref{fig:chi2cellextend} shows the median of the normalized cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks after the nonlinear nine maps as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The pink circles show the $\chi^{2}$ values for the DESI LRG targets cleaned the nonlinear nine maps method. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence. Since the non-linear three maps fails to pass the tests, we argue that none of the linear methods are effective in mitigating systematics. Therefore, based on the mean density test, the most motivated method is the non-linear method using nine maps.}
 
 \begin{table*}
-  \caption{Mean density and normalized cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ and $76.9$ clean mocks \mr{that have received the same mitigation. For the case of No Weight, we use the clean mocks without mitigation}.}\label{tab:chi2test}
+  \caption{Mean galaxy density contrast $\chi^{2}$ and normalized cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ and $76.9$ clean mocks \mr{that have received the same mitigation. For the case of No Weight, we use the clean mocks without mitigation}.}\label{tab:chi2test}
   \begin{tabular}{lcccc|cccc}
     \hline
     \hline
     \multirow{3}{*}{} &&
-      \multicolumn{2}{c}{\textbf{Mean Density (dof=72)}} & & &
-      \multicolumn{2}{c}{\textbf{Cross Spectrum (dof=81)}} \\
+      \multicolumn{2}{c}{\textbf{Mean Galaxy Density Contrast (dof=72)}} & & &
+      \multicolumn{2}{c}{\textbf{Normalized Cross Power Spectrum (dof=81)}} \\
     & \multicolumn{2}{c}{Covariance: $\fnl$=0} & \multicolumn{2}{c}{$\fnl$=76.9} & \multicolumn{2}{c}{$\fnl$=0} & \multicolumn{2}{c}{$\fnl$=76.9} \\
     \hline
     \textbf{Method} & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
@@ -108,7 +108,7 @@ Nonlinear Nine Maps & 71.9 & 0.487 & 74.9 & 0.392 & 195.1 & 0.047 & 62.2 & 0.767
 
 
 \subsection{Scale dependent systematics}\label{sec:scalesys}
-Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for the DESI LRG targets cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.
+\mout{Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for the DESI LRG targets cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.}
 
 \begin{figure}
 \centering
